--- a/CSharpFunctionalExtensionsNet4.0/CSharpFunctionalExtensionsNet4.0.csproj
+++ b/CSharpFunctionalExtensionsNet4.0/CSharpFunctionalExtensionsNet4.0.csproj
@@ -14,7 +14,8 @@
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Version>2.2.0</Version>
     <AssemblyName>CSharpFunctionalExtensions</AssemblyName>
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>9.0</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
